basic bot works; now to make aws connect work

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node_modules/gulp/bin/gulp.js",
     "package": "aws cloudformation package --region us-east-1 --template-file template.yml --output-template-file packaged-template.yml --s3-bucket $CODE_BUCKET",
-    "deploy": "aws cloudformation deploy --region us-east-1 --template-file packaged-template.yml --capabilities CAPABILITY_IAM --stack-name dev-todo-$USER"
+    "deploy": "aws cloudformation deploy --region us-east-1 --template-file packaged-template.yml --capabilities CAPABILITY_IAM --stack-name dev-connect-$USER"
   },
   "repository": {
     "type": "git",
