--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
   },
   "homepage": "https://github.com/evanchiu/serverless-todo#readme",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "aws-sdk": "^2.802.0",
     "gulp": "^4.0.2",
     "gulp-jshint": "^2.1.0",
     "gulp-zip": "^4.2.0",
+    "jest": "^26.6.3",
     "jshint": "^2.9.6"
   },
   "dependencies": {
